docs: sync progress, roadmap, and CLAUDE.md for Phase 15
- docs/progress.md: Phase 15 complete — Helm chart, Dockerfiles, CI/CD workflows
- docs/roadmap.md: Phase 15 marked complete, Phase 16 Aether Core Integration added
- CLAUDE.md: current status updated to Phases 0-15 complete, active Phase 16

https://claude.ai/code/session_01CqKpEmxG3ZNBB9h2Pzk23y